# etl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
etl/: __init__.py  constants.py  main.py
etl/data/: extract.py  load.py  transform.py
etl/utils/: database.ini  db_config.py
